--- a/thehive-templates/Yara_0_1/long.html
+++ b/thehive-templates/Yara_0_1/long.html
@@ -7,7 +7,7 @@
 			<dt>Matches</dt>
 			<dd ng-repeat="m in content.results">{{m}}</dd>
 		</dl>
-	</div>	
+	</div>
 </div>
 <div class="panel panel-success" ng-if="success && content.results.length == 0">
 	<div class="panel-heading">
@@ -15,5 +15,18 @@
 	</div>
 	<div class="panel-body">
 		<span>No matches.</span>
-	</div>	
+	</div>
+</div>
+
+<!-- General error  -->
+<div class="panel panel-danger" ng-if="!success">
+    <div class="panel-heading">
+        <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
+    </div>
+    <div class="panel-body">
+    	<dl class="dl-horizontal" ng-if="content.errorMessage">
+            <dt><i class="fa fa-warning"></i> Yara: </dt>
+            <dd class="wrap">{{content.errorMessage}}</dd>
+        </dl>
+    </div>
 </div>
