--- a/thehive-templates/Yara_3_0/long.html
+++ b/thehive-templates/Yara_3_0/long.html
@@ -41,12 +41,14 @@
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
+						<th>Identifier</th>
 						<th>Offset</th>
 						<th>Matched</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr ng-repeat="str in rule.strings">
+						<td>{{str.identifier}}</td>
 						<td>{{str.offset}}</td>
 						<td>{{str.matched}}</td>
 					</tr>
